--- a/new_pages/age_pyramid.qmd
+++ b/new_pages/age_pyramid.qmd
@@ -13,7 +13,7 @@ knitr::include_graphics(here::here("images", "likert.png"))
 Demographic pyramids are useful to show distributions of age and gender. Similar code can be used to visualize the results of Likert-style survey questions (e.g. "Strongly agree", "Agree", "Neutral", "Disagree", "Strongly disagree"). In this page we cover the following:  
 
 * Fast & easy pyramids using the **apyramid** package.  
-* More customizeable pyramids using `ggplot()`.  
+* More customizable pyramids using `ggplot()`.  
 * Displaying "baseline" demographics in the background of the pyramid.  
 * Using pyramid-style plots to show other types of data (e.g responses to **Likert-style** survey questions).  
 
