--- a/new_pages/characters_strings.qmd
+++ b/new_pages/characters_strings.qmd
@@ -47,7 +47,7 @@ pacman::p_load(
 ### Import data  {.unnumbered}  
 
 
-In this page we will occassionally reference the cleaned `linelist` of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import data with the `import()` function from the **rio** package (it handles many file types like .xlsx, .csv, .rds - see the [Import and export](importing.qmd) page for details).  
+In this page we will occasionally reference the cleaned `linelist` of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import data with the `import()` function from the **rio** package (it handles many file types like .xlsx, .csv, .rds - see the [Import and export](importing.qmd) page for details).  
 
 ```{r, echo=F, warning=F, message=F}
 # import the linelist into R
@@ -401,7 +401,7 @@ paste0("Regional hospital needs ", n_beds, " beds and ", n_masks, " masks.")
 <!-- ======================================================= -->
 ### Change case {.unnumbered}
 
-Often one must alter the case/capitalization of a string value, for example names of jursidictions. Use `str_to_upper()`, `str_to_lower()`, and `str_to_title()`, from **stringr**, as shown below:  
+Often one must alter the case/capitalization of a string value, for example names of jurisdictions. Use `str_to_upper()`, `str_to_lower()`, and `str_to_title()`, from **stringr**, as shown below:  
 
 ```{r}
 str_to_upper("California")
