--- a/new_pages/cleaning.qmd
+++ b/new_pages/cleaning.qmd
@@ -1251,7 +1251,7 @@ table(linelist$age_cat, useNA = "always")
 
 You can adjust how the labels are displayed with `separator = `. The default is "-"  
 
-You can adjust how the top numbers are handled, with the `ceiling = ` arguemnt. To set an upper cut-off set `ceiling = TRUE`. In this use, the highest break value provided is a "ceiling" and a category "XX+" is not created. Any values above highest break value (or to `upper = `, if defined) are categorized as `NA`. Below is an example with `ceiling = TRUE`, so that there is no category of XX+ and values above 70 (the highest break value) are assigned as NA.  
+You can adjust how the top numbers are handled, with the `ceiling = ` argument. To set an upper cut-off set `ceiling = TRUE`. In this use, the highest break value provided is a "ceiling" and a category "XX+" is not created. Any values above highest break value (or to `upper = `, if defined) are categorized as `NA`. Below is an example with `ceiling = TRUE`, so that there is no category of XX+ and values above 70 (the highest break value) are assigned as NA.  
 
 ```{r}
 # With ceiling set to TRUE
