--- a/new_pages/collaboration.qmd
+++ b/new_pages/collaboration.qmd
@@ -114,7 +114,7 @@ install *Git* from <https://git-scm.com/downloads>.**
 ### Install an interface (optional but recommended) {.unnumbered}
 
 Git has its own language of commands, which can be typed into a command
-line terminal. However, there are many clients/interfaces and as non-developpers, in your
+line terminal. However, there are many clients/interfaces and as non-developers, in your
 day-to-day use, you will rarely _need_ to interact with Git directly and 
 interface usually provide nice visualisation tools for file modifications or branches. 
 
@@ -122,7 +122,7 @@ Many options exist, on all OS, from beginner friendly to more complex ones.
 Good options for beginners include the RStudio Git pane and 
 [Github Desktop](https://desktop.github.com/), which we will showcase in 
 this chapter.
-Intermediate (more powerfull, but more complex) options include Source Tree, 
+Intermediate (more powerful, but more complex) options include Source Tree, 
 Gitkracken, Smart Git and others.
 
 Quick explanation on [Git clients](https://happygitwithr.com/git-client).
@@ -145,7 +145,7 @@ You may be offered to set-up two-factor authentication with an app on
 your phone. Read more in the Github [help
 documents](https://docs.github.com/en/github/authenticating-to-github/securing-your-account-with-two-factor-authentication-2fa).
 
-If you use Github Desktop, you can enter your Gitub credentials after
+If you use Github Desktop, you can enter your Github credentials after
 installation following these
 [steps](https://docs.github.com/en/desktop/installing-and-configuring-github-desktop/authenticating-to-github).
 If you don't do it know, credentials will be asked later when you try to
